// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders correctly, isLandscape false 1`] = `
<ErrorBoundary>
  <Main
    isLandscape={false}
  />
</ErrorBoundary>
`;

exports[`render renders correctly, isLandscape true 1`] = `
<ErrorBoundary>
  <Main
    isLandscape={true}
  />
</ErrorBoundary>
`;
